:fix: align menu title left

--- a/sass/restaurants_1.scss
+++ b/sass/restaurants_1.scss
@@ -95,6 +95,7 @@ body{
         gap: 20px;
         margin-bottom: 30px;
         h3{
+            align-self: flex-start;
             font-size: 16px;
             font-weight: 300;
             padding-bottom: 5px;
